# daily_dish_hub

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TODO.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  syntax-checks.yml
app/: __init__.py  web.py
app/api/: __init__.py  auth.py  categories.py  daily_menu.py  dependencies.py  health.py  images.py  items.py  public.py  public_images.py  units.py
app/bot/: __init__.py  handlers.py  main.py
app/core/: config.py  logging_config.py
app/db/: __init__.py  engine.py  models.py  session.py
docs/: DOCKER.md  DONATE.md  Daily_Dish_Hub_Technical_Atlas.md  QUICKSTART.md  README.md  SCREENSHOTS.md  SECURITY.md  TODO.md
frontend/: .dockerignore  .eslintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
migrations/: README.md  env.py  script.py.mako
scripts/: create_admin.py  init_db.py  migrate.py  reset.sh  run_bot.sh  run_docker.sh  run_web.sh  setup.sh  update_secrets.sh
tests/: README.md  conftest.py  run_all.sh  test_admin_permissions.py  test_admin_protection_smoke.py  test_api_dependencies.py  test_image_service_unit.py  test_menu_service.py  test_ordered_entity_service.py  test_rate_limiter.py  test_security.py  test_session_init.py  test_utils_unit.py
(+76 files in other folders)
